// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router renders the initial page with a window passes current location details 1`] = `
<StartingComponent
  location={
    Object {
      "hash": "#grr",
      "pathname": "/magic/",
      "search": "?foo=bar",
    }
  }
/>
`;

exports[`Router renders the initial page without a window 1`] = `
<StartingComponent
  location={
    Object {
      "hash": "",
      "pathname": "/magic/",
      "search": "",
    }
  }
/>
`;
